--- a/lectures/bib/bibliography.bib
+++ b/lectures/bib/bibliography.bib
@@ -1193,15 +1193,25 @@ abstract = "Background Autism spectrum disorder (ASD) is associated with altered
   publisher={Elsevier},
   doi={10.1016/j.cognition.2015.05.011}
 }
-@article{gogtay2004dynamic,
-  title={Dynamic mapping of human cortical development during childhood through early adulthood},
-  author={Gogtay, Nitin and Giedd, Jay N and Lusk, Leslie and Hayashi, Kiralee M and Greenstein, Deanna and Vaituzis, A Catherine and Nugent, Tom F and Herman, David H and Clasen, Liv S and Toga, Arthur W and others},
-  journal={Proceedings of the National Academy of Sciences of the United States of America},
-  volume={101},
-  number={21},
-  pages={8174--8179},
-  year={2004},
-  publisher={National Acad Sciences}
+
+@ARTICLE{Gogtay2004-bq,
+  title    = "Dynamic mapping of human cortical development during childhood
+              through early adulthood",
+  author   = "Gogtay, Nitin and Giedd, Jay N and Lusk, Leslie and Hayashi,
+              Kiralee M and Greenstein, Deanna and Vaituzis, A Catherine and
+              Nugent, Tom F and Herman, David H and Clasen, Liv S and Toga,
+              Arthur W and Rapoport, Judith L and Thompson, Paul M",
+  journal  = "Proc. Natl. Acad. Sci. U. S. A.",
+  volume   =  101,
+  number   =  21,
+  pages    = "8174--8179",
+  month    =  may,
+  year     =  2004,
+  url      = "http://www.pnas.org/content/101/21/8174",
+  language = "en",
+  issn     = "0027-8424, 1091-6490",
+  pmid     = "15148381",
+  doi      = "10.1073/pnas.0402680101"
 }
 @article{Hagmann02112010,
 author = {Hagmann, P. and Sporns, O. and Madan, N. and Cammoun, L. and Pienaar, R. and Wedeen, V. J. and Meuli, R. and Thiran, J.-P. and Grant, P. E.}, 
