--- a/docs/lectures/bib/bibliography.bib
+++ b/docs/lectures/bib/bibliography.bib
@@ -1,4 +1,311 @@
 
+@ARTICLE{Lenroot2007-nh,
+  title       = "Sexual dimorphism of brain developmental trajectories during
+                 childhood and adolescence",
+  author      = "Lenroot, Rhoshel K and Gogtay, Nitin and Greenstein, Deanna K
+                 and Wells, Elizabeth Molloy and Wallace, Gregory L and Clasen,
+                 Liv S and Blumenthal, Jonathan D and Lerch, Jason and
+                 Zijdenbos, Alex P and Evans, Alan C and Thompson, Paul M and
+                 Giedd, Jay N",
+  affiliation = "Child Psychiatry Branch of the National Institute of Mental
+                 Health, NIMH/CHP 10 Center Drive, Bethesda, MD 20814-9692,
+                 USA. lenrootr@mail.nih.gov",
+  journal     = "Neuroimage",
+  volume      =  36,
+  number      =  4,
+  pages       = "1065--1073",
+  month       =  jul,
+  year        =  2007,
+  url         = "http://dx.doi.org/10.1016/j.neuroimage.2007.03.053",
+  language    = "en",
+  issn        = "1053-8119",
+  pmid        = "17513132",
+  doi         = "10.1016/j.neuroimage.2007.03.053",
+  pmc         = "PMC2040300"
+}
+
+@ARTICLE{White2010-yn,
+  title       = "The development of gyrification in childhood and adolescence",
+  author      = "White, Tonya and Su, Shu and Schmidt, Marcus and Kao, Chiu-Yen
+                 and Sapiro, Guillermo",
+  affiliation = "Department of Child and Adolescent Psychiatry, Erasmus Medical
+                 Centre, Rotterdam, The Netherlands. t.white@eramusmc.nl",
+  journal     = "Brain Cogn.",
+  volume      =  72,
+  number      =  1,
+  pages       = "36--45",
+  month       =  feb,
+  year        =  2010,
+  url         = "http://dx.doi.org/10.1016/j.bandc.2009.10.009",
+  language    = "en",
+  issn        = "0278-2626, 1090-2147",
+  pmid        = "19942335",
+  doi         = "10.1016/j.bandc.2009.10.009",
+  pmc         = "PMC2815169"
+}
+
+@ARTICLE{Gogtay2010-zu,
+  title    = "Mapping gray matter development: implications for typical
+              development and vulnerability to psychopathology",
+  author   = "Gogtay, Nitin and Thompson, Paul M",
+  journal  = "Brain Cogn.",
+  volume   =  72,
+  number   =  1,
+  pages    = "6--15",
+  month    =  feb,
+  year     =  2010,
+  url      = "http://dx.doi.org/10.1016/j.bandc.2009.08.009",
+  issn     = "0278-2626, 1090-2147",
+  pmid     = "19796863",
+  doi      = "10.1016/j.bandc.2009.08.009"
+}
+
+
+@ARTICLE{Petrican2017-re,
+  title       = "Trajectories of brain system maturation from childhood to
+                 older adulthood: Implications for lifespan cognitive
+                 functioning",
+  author      = "Petrican, Raluca and Taylor, Margot J and Grady, Cheryl L",
+  affiliation = "Rotman Research Institute, Canada. Electronic address:
+                 raluca.petrican@gmail.com. The Hospital for Sick Children and
+                 Departments of Paediatrics and Psychology, University of
+                 Toronto, Canada. Rotman Research Institute and Departments of
+                 Psychology and Psychiatry, University of Toronto, Canada.",
+  journal     = "Neuroimage",
+  month       =  sep,
+  year        =  2017,
+  url         = "http://dx.doi.org/10.1016/j.neuroimage.2017.09.025",
+  keywords    = "Cognitive flexibility; Development; Emotion processing;
+                 Functional networks; Verbal reasoning",
+  language    = "en",
+  issn        = "1053-8119, 1095-9572",
+  pmid        = "28917697",
+  doi         = "10.1016/j.neuroimage.2017.09.025"
+}
+
+@ARTICLE{Kuzawa2014-qd,
+  title       = "Metabolic costs and evolutionary implications of human brain
+                 development",
+  author      = "Kuzawa, Christopher W and Chugani, Harry T and Grossman,
+                 Lawrence I and Lipovich, Leonard and Muzik, Otto and Hof,
+                 Patrick R and Wildman, Derek E and Sherwood, Chet C and
+                 Leonard, William R and Lange, Nicholas",
+  affiliation = "Department of Anthropology, Institute for Policy Research,
+                 Northwestern University, Evanston, IL 60208;
+                 kuzawa@northwestern.edu. Positron Emission Tomography Center,
+                 Children's Hospital of Michigan, Detroit, MI 48201; Department
+                 of Pediatrics, Department of Neurology, and. Center for
+                 Molecular Medicine and Genetics, Wayne State University School
+                 of Medicine, Detroit, MI 48201; Department of Neurology, and
+                 Center for Molecular Medicine and Genetics, Wayne State
+                 University School of Medicine, Detroit, MI 48201; Department
+                 of Pediatrics. Fishberg Department of Neuroscience and
+                 Friedman Brain Institute, Icahn School of Medicine at Mount
+                 Sinai, New York, NY 10029; Center for Molecular Medicine and
+                 Genetics, Wayne State University School of Medicine, Detroit,
+                 MI 48201; Institute of Genomic Biology, Department of
+                 Molecular and Integrative Physiology, University of Illinois,
+                 Urbana, IL 61801; Department of Anthropology, The George
+                 Washington University, Washington, DC 20052; and. Department
+                 of Anthropology. Department of Psychiatry and Department of
+                 Biostatistics, Harvard University and McLean Hospital,
+                 Cambridge, MA 02138.",
+  journal     = "Proc. Natl. Acad. Sci. U. S. A.",
+  volume      =  111,
+  number      =  36,
+  pages       = "13010--13015",
+  month       =  sep,
+  year        =  2014,
+  url         = "http://dx.doi.org/10.1073/pnas.1323099111",
+  keywords    = "anthropology; diabetes; human evolution; neuroimaging;
+                 neuronal plasticity",
+  language    = "en",
+  issn        = "0027-8424, 1091-6490",
+  pmid        = "25157149",
+  doi         = "10.1073/pnas.1323099111",
+  pmc         = "PMC4246958"
+}
+@ARTICLE{10.3389/fnhum.2014.00051,
+  AUTHOR={Irimia, Andrei and Van Horn, John},   
+	 TITLE={Systematic network lesioning reveals the core white matter scaffold of the human brain},      
+	JOURNAL={Frontiers in Human Neuroscience},      
+	VOLUME={8},      
+PAGES={51},     
+	YEAR={2014},      
+	  URL={http://journal.frontiersin.org/article/10.3389/fnhum.2014.00051},       
+	DOI={10.3389/fnhum.2014.00051},      
+	ISSN={1662-5161},   
+   ABSTRACT={Brain connectivity loss due to traumatic brain injury, stroke or multiple sclerosis can have serious consequences on life quality and a measurable impact upon neural and cognitive function. Though brain network properties are known to be affected disproportionately by injuries to certain gray matter regions, the manner in which white matter insults affect such properties remains poorly understood. Here, network-theoretic analysis allows us to identify the existence of a macroscopic neural connectivity core in the adult human brain which is particularly sensitive to network lesioning. The systematic lesion analysis of brain connectivity matrices from diffusion neuroimaging over a large sample (N=110) reveals that the global vulnerability of brain networks can be predicated upon the extent to which injuries disrupt this connectivity core, which is found to be quite distinct from the set of connections between rich club nodes in the brain. Thus, in addition to connectivity within the rich club, the brain as a network also contains a distinct core scaffold of network edges consisting of WM connections whose damage dramatically lowers the integrative properties of brain networks. This pattern of core white matter fasciculi whose injury results in major alterations to overall network integrity presents new avenues for clinical outcome prediction following brain injury by relating lesion locations to connectivity core disruption and implications for recovery. The findings of this study contribute substantially to current understanding of the human white matter connectome, its sensitivity to injury, and clarify a long-standing debate regarding the relative prominence of gray vs. white matter regions in the context of brain structure and connectomic architecture.}
+}
+
+@ARTICLE{Shaw2008-dq,
+  title     = "Neurodevelopmental trajectories of the human cerebral cortex",
+  author    = "Shaw, Philip and Kabani, Noor J and Lerch, Jason P and
+               Eckstrand, Kristen and Lenroot, Rhoshel and Gogtay, Nitin and
+               Greenstein, Deanna and Clasen, Liv and Evans, Alan and Rapoport,
+               Judith L and {Others}",
+  journal   = "Journal of Neuroscience",
+  publisher = "Soc Neuroscience",
+  volume    =  28,
+  number    =  14,
+  pages     = "3586--3594",
+  doi       = "10.1523/JNEUROSCI.5309-07.2008",
+  year      =  2008,
+  url       = "http://www.jneurosci.org/content/28/14/3586.short"
+}
+
+@ARTICLE{Kang2011-ex,
+  title    = "Spatio-temporal transcriptome of the human brain",
+  author   = "Kang, Hyo Jung and Kawasawa, Yuka Imamura and Cheng, Feng and
+              Zhu, Ying and Xu, Xuming and Li, Mingfeng and Sousa, Andr{\'e} M
+              M and Pletikos, Mihovil and Meyer, Kyle A and Sedmak, Goran and
+              Guennel, Tobias and Shin, Yurae and Johnson, Matthew B and
+              Krsnik, {\v Z}eljka and Mayer, Simone and Fertuzinhos, Sofia and
+              Umlauf, Sheila and Lisgo, Steven N and Vortmeyer, Alexander and
+              Weinberger, Daniel R and Mane, Shrikant and Hyde, Thomas M and
+              Huttner, Anita and Reimers, Mark and Kleinman, Joel E and {\v
+              S}estan, Nenad",
+  journal  = "Nature",
+  volume   =  478,
+  number   =  7370,
+  pages    = "483--489",
+  month    =  oct,
+  year     =  2011,
+  url      = "http://www.nature.com/nature/journal/v478/n7370/full/nature10523.html",
+  keywords = "Neuroscience",
+  language = "en",
+  issn     = "0028-0836",
+  doi      = "10.1038/nature10523"
+}
+
+@ARTICLE{Gotz2005-yj,
+  title       = "The cell biology of neurogenesis",
+  author      = "G{\"o}tz, Magdalena and Huttner, Wieland B",
+  affiliation = "Institute for Stem Cell Research, GSF-National Research Center
+                 for Environment and Health, Ingolst{\"a}dter Landstrasse 1,
+                 D-85764 Neuherberg/Munich, Germany. magdalena.goetz@gsf.de",
+  journal     = "Nat. Rev. Mol. Cell Biol.",
+  volume      =  6,
+  number      =  10,
+  pages       = "777--788",
+  month       =  oct,
+  year        =  2005,
+  url         = "http://dx.doi.org/10.1038/nrm1739",
+  language    = "en",
+  issn        = "1471-0072",
+  pmid        = "16314867",
+  doi         = "10.1038/nrm1739"
+}
+
+@ARTICLE{Chi1977-hm,
+  title    = "Gyral development of the human brain",
+  author   = "Chi, J G and Dooling, E C and Gilles, F H",
+  journal  = "Ann. Neurol.",
+  volume   =  1,
+  number   =  1,
+  pages    = "86--93",
+  month    =  jan,
+  year     =  1977,
+  url      = "http://dx.doi.org/10.1002/ana.410010109",
+  language = "en",
+  issn     = "0364-5134",
+  pmid     = "560818",
+  doi      = "10.1002/ana.410010109"
+}
+
+@ARTICLE{Knickmeyer2008-vl,
+  title       = "A structural {MRI} study of human brain development from birth
+                 to 2 years",
+  author      = "Knickmeyer, Rebecca C and Gouttard, Sylvain and Kang, Chaeryon
+                 and Evans, Dianne and Wilber, Kathy and Smith, J Keith and
+                 Hamer, Robert M and Lin, Weili and Gerig, Guido and Gilmore,
+                 John H",
+  affiliation = "Department of Psychiatry, University of North Carolina, Chapel
+                 Hill, North Carolina 27599-7160, USA.",
+  journal     = "J. Neurosci.",
+  volume      =  28,
+  number      =  47,
+  pages       = "12176--12182",
+  month       =  nov,
+  year        =  2008,
+  url         = "http://dx.doi.org/10.1523/JNEUROSCI.3479-08.2008",
+  language    = "en",
+  issn        = "0270-6474, 1529-2401",
+  pmid        = "19020011",
+  doi         = "10.1523/JNEUROSCI.3479-08.2008",
+  pmc         = "PMC2884385"
+}
+
+@ARTICLE{Johnson2001-yy,
+  title    = "Functional brain development in humans",
+  author   = "Johnson, Mark H",
+  journal  = "Nat. Rev. Neurosci.",
+  volume   =  2,
+  number   =  7,
+  pages    = "475--483",
+  month    =  jul,
+  year     =  2001,
+  url      = "http://www.nature.com/nrn/journal/v2/n7/abs/nrn0701_475a.html",
+  language = "en",
+  issn     = "1471-003X",
+  doi      = "10.1038/35081509"
+}
+
+@ARTICLE{Gogtay2004-bq,
+  title    = "Dynamic mapping of human cortical development during childhood
+              through early adulthood",
+  author   = "Gogtay, Nitin and Giedd, Jay N and Lusk, Leslie and Hayashi,
+              Kiralee M and Greenstein, Deanna and Vaituzis, A Catherine and
+              Nugent, Tom F and Herman, David H and Clasen, Liv S and Toga,
+              Arthur W and Rapoport, Judith L and Thompson, Paul M",
+  journal  = "Proc. Natl. Acad. Sci. U. S. A.",
+  volume   =  101,
+  number   =  21,
+  pages    = "8174--8179",
+  month    =  may,
+  year     =  2004,
+  url      = "http://www.pnas.org/content/101/21/8174",
+  language = "en",
+  issn     = "0027-8424, 1091-6490",
+  pmid     = "15148381",
+  doi      = "10.1073/pnas.0402680101"
+}
+
+@ARTICLE{Cao2017-bl,
+  title       = "Developmental Connectomics from Infancy through Early
+                 Childhood",
+  author      = "Cao, Miao and Huang, Hao and He, Yong",
+  affiliation = "National Key Laboratory of Cognitive Neuroscience and
+                 Learning, Beijing Normal University, Beijing 100875, China;
+                 Beijing Key Laboratory of Brain Imaging and Connectomics,
+                 Beijing Normal University, Beijing 100875, China; IDG/McGovern
+                 Institute for Brain Research, Beijing Normal University,
+                 Beijing 100875, China. Department of Radiology, Children's
+                 Hospital of Philadelphia, Philadelphia, PA 19104, USA;
+                 Department of Radiology, University of Pennsylvania,
+                 Philadelphia, PA 19104, USA. National Key Laboratory of
+                 Cognitive Neuroscience and Learning, Beijing Normal
+                 University, Beijing 100875, China; Beijing Key Laboratory of
+                 Brain Imaging and Connectomics, Beijing Normal University,
+                 Beijing 100875, China; IDG/McGovern Institute for Brain
+                 Research, Beijing Normal University, Beijing 100875, China.
+                 Electronic address: yong.he@bnu.edu.cn.",
+  journal     = "Trends in Neuroscience",
+  volume      =  40,
+  number      =  8,
+  pages       = "494--506",
+  month       =  aug,
+  year        =  2017,
+  url         = "http://dx.doi.org/10.1016/j.tins.2017.06.003",
+  keywords    = "connectome; developmental disorder; functional connectivity;
+                 graph theory; segregation and integration; structural
+                 connectivity",
+  language    = "en",
+  issn        = "0166-2236, 1878-108X",
+  pmid        = "28684174",
+  doi         = "10.1016/j.tins.2017.06.003"
+}
+
 @ARTICLE{Herculano-Houzel2012-up,
   title       = "The remarkable, yet not extraordinary, human brain as a
                  scaled-up primate brain and its associated cost",
