Add depression slides

--- a/schedule.Rmd
+++ b/schedule.Rmd
@@ -221,6 +221,8 @@ title: "Schedule"
     - Psychopathology I: Depression.
 - Assignments
     - Read [W&B](https://2e.mindsmachine.com/) 12:352-358.
+- Materials
+    - Lecture notes. | [PDF](lectures/Depression_Lecture 10.16.pptx.pdf.pdf) |
     
 <!-- What do drug treatments do? Look at pop sci article; what does it get wrong? -->
 
