Add white matter evidence to schiz

--- a/docs/lectures/bib/bibliography.bib
+++ b/docs/lectures/bib/bibliography.bib
@@ -1,4 +1,349 @@
 
+@ARTICLE{Kochunov2016-cu,
+  title       = "Heterochronicity of white matter development and aging
+                 explains regional patient control differences in schizophrenia",
+  author      = "Kochunov, Peter and Ganjgahi, Habib and Winkler, Anderson and
+                 Kelly, Sinead and Shukla, Dinesh K and Du, Xiaoming and
+                 Jahanshad, Neda and Rowland, Laura and Sampath, Hemalatha and
+                 Patel, Binish and O'Donnell, Patricio and Xie, Zhiyong and
+                 Paciga, Sara A and Schubert, Christian R and Chen, Jian and
+                 Zhang, Guohao and Thompson, Paul M and Nichols, Thomas E and
+                 Hong, L Elliot",
+  affiliation = "Maryland Psychiatric Research Center, Department of
+                 Psychiatry, University of Maryland School of Medicine,
+                 Baltimore, Maryland. Department of Statistics, University of
+                 Warwick, Warwick, United Kingdom. FMRIB Centre, Oxford
+                 University, Oxford, United Kingdom. Imaging Genetics Center,
+                 Keck School of Medicine of USC, Marina del Rey, California.
+                 Neuroscience Research Unit, Worldwide Research and
+                 Development, Pfizer Inc, 610 Main Street, Cambridge,
+                 Massachusetts, 02139. Enterprise Scientific Technology
+                 Operations, Worldwide Research and Development, Pfizer Inc,
+                 Eastern Point Rd, Groton, Connecticut, 06340. Biogen,
+                 Cambridge, Massachusetts, 02142. Department of Computer
+                 Science and Electrical Engineering, University of Maryland,
+                 Baltimore County, Maryland, 21250.",
+  journal     = "Hum. Brain Mapp.",
+  volume      =  37,
+  number      =  12,
+  pages       = "4673--4688",
+  month       =  dec,
+  year        =  2016,
+  url         = "http://dx.doi.org/10.1002/hbm.23336",
+  keywords    = "DTI; aging; schizophrenia",
+  language    = "en",
+  issn        = "1065-9471, 1097-0193",
+  pmid        = "27477775",
+  doi         = "10.1002/hbm.23336",
+  pmc         = "PMC5118078"
+}
+
+@ARTICLE{Kelly2017-lj,
+  title       = "Widespread white matter microstructural differences in
+                 schizophrenia across 4322 individuals: results from the
+                 {ENIGMA} Schizophrenia {DTI} Working Group",
+  author      = "Kelly, S and Jahanshad, N and Zalesky, A and Kochunov, P and
+                 Agartz, I and Alloza, C and Andreassen, O A and Arango, C and
+                 Banaj, N and Bouix, S and Bousman, C A and Brouwer, R M and
+                 Bruggemann, J and Bustillo, J and Cahn, W and Calhoun, V and
+                 Cannon, D and Carr, V and Catts, S and Chen, J and Chen, J-X
+                 and Chen, X and Chiapponi, C and Cho, Kl K and Ciullo, V and
+                 Corvin, A S and Crespo-Facorro, B and Cropley, V and De Rossi,
+                 P and Diaz-Caneja, C M and Dickie, E W and Ehrlich, S and Fan,
+                 F-M and Faskowitz, J and Fatouros-Bergman, H and Flyckt, L and
+                 Ford, J M and Fouche, J-P and Fukunaga, M and Gill, M and
+                 Glahn, D C and Gollub, R and Goudzwaard, E D and Guo, H and
+                 Gur, R E and Gur, R C and Gurholt, T P and Hashimoto, R and
+                 Hatton, S N and Henskens, F A and Hibar, D P and Hickie, I B
+                 and Hong, L E and Horacek, J and Howells, F M and Hulshoff
+                 Pol, H E and Hyde, C L and Isaev, D and Jablensky, A and
+                 Jansen, P R and Janssen, J and J{\"o}nsson, E G and Jung, L A
+                 and Kahn, R S and Kikinis, Z and Liu, K and Klauser, P and
+                 Kn{\"o}chel, C and Kubicki, M and Lagopoulos, J and Langen, C
+                 and Lawrie, S and Lenroot, R K and Lim, K O and
+                 Lopez-Jaramillo, C and Lyall, A and Magnotta, V and Mandl, R C
+                 W and Mathalon, D H and McCarley, R W and McCarthy-Jones, S
+                 and McDonald, C and McEwen, S and McIntosh, A and Melicher, T
+                 and Mesholam-Gately, R I and Michie, P T and Mowry, B and
+                 Mueller, B A and Newell, D T and O'Donnell, P and
+                 Oertel-Kn{\"o}chel, V and Oestreich, L and Paciga, S A and
+                 Pantelis, C and Pasternak, O and Pearlson, G and Pellicano, G
+                 R and Pereira, A and Pineda Zapata, J and Piras, F and Potkin,
+                 S G and Preda, A and Rasser, P E and Roalf, D R and Roiz, R
+                 and Roos, A and Rotenberg, D and Satterthwaite, T D and
+                 Savadjiev, P and Schall, U and Scott, R J and Seal, M L and
+                 Seidman, L J and Shannon Weickert, C and Whelan, C D and
+                 Shenton, M E and Kwon, J S and Spalletta, G and Spaniel, F and
+                 Sprooten, E and St{\"a}blein, M and Stein, D J and Sundram, S
+                 and Tan, Y and Tan, S and Tang, S and Temmingh, H S and
+                 Westlye, L T and T{\o}nnesen, S and Tordesillas-Gutierrez, D
+                 and Doan, N T and Vaidya, J and van Haren, N E M and Vargas, C
+                 D and Vecchio, D and Velakoulis, D and Voineskos, A and
+                 Voyvodic, J Q and Wang, Z and Wan, P and Wei, D and Weickert,
+                 T W and Whalley, H and White, T and Whitford, T J and Wojcik,
+                 J D and Xiang, H and Xie, Z and Yamamori, H and Yang, F and
+                 Yao, N and Zhang, G and Zhao, J and van Erp, T G M and Turner,
+                 J and Thompson, P M and Donohoe, G",
+  affiliation = "Imaging Genetics Center, Stevens Neuroimaging \&Informatics
+                 Institute, Keck School of Medicine, University of Southern
+                 California, Marina del Rey, CA, USA. Harvard Medical School,
+                 Boston, MA, USA. Melbourne Neuropsychiatry Centre, Department
+                 of Psychiatry, University of Melbourne and Melbourne Health,
+                 Carlton South, VIC, Australia. Maryland Psychiatric Research
+                 Center, Department of Psychiatry, University of Maryland
+                 School of Medicine, Baltimore, MD, USA. NORMENT, KG Jebsen
+                 Centre for Psychosis Research, Division of Mental Health and
+                 Addiction, Oslo University Hospital and Institute of Clinical
+                 Medicine, University of Oslo, Oslo, Norway. Department of
+                 Clinical Neuroscience, Centre for Psychiatry Research,
+                 Karolinska Institutet, Stockholm, Sweden. Department of
+                 Psychiatric Research, Diakonhjemmet Hospital, Oslo, Norway.
+                 University of Edinburgh, Edinburgh, UK. University of Oslo,
+                 Oslo, Norway. Child and Adolescent Psychiatry Department,
+                 Hospital General Universitario Gregorio Mara{\~n}{\'o}n,
+                 School of Medicine, Universidad Complutense, IiSGM, CIBERSAM,
+                 Madrid, Spain. Laboratory of Neuropsychiatry, Department of
+                 Clinical and Behavioral Neurology, IRCCS Santa Lucia
+                 Foundation, Rome, Italy. Department of Psychiatry, Brigham and
+                 Women's Hospital, Harvard Medical School, Boston, MA, USA.
+                 Florey Institute of Neuroscience and Mental Health, Parkville,
+                 VIC, Australia. Department of General Practice, The University
+                 of Melbourne, Parkville, VIC, Australia. Swinburne University
+                 of Technology, Melbourne, VIC, Australia. Department of
+                 Psychiatry, Brain Center Rudolf Magnus, University Medical
+                 Center Utrecht, Utrecht, The Netherlands. Neuroscience
+                 Research Australia and School of Psychiatry, University of New
+                 South Wales, Sydney, NSW, Australia. University of New Mexico,
+                 Albuquerque, NM, USA. The Department of Electrical and
+                 Computer Engineering, University of New Mexico, Albuquerque,
+                 NM, USA. The Mind Research Network, Albuquerque, NM, USA.
+                 Centre for Neuroimaging and Cognitive Genomics (NICOG),
+                 Clinical Neuroimaging Laboratory, NCBES Galway Neuroscience
+                 Centre, National University of Ireland Galway, Galway,
+                 Ireland. Discipline of Psychiatry, School of Medicine,
+                 University of Queensland, Herston, QLD, Australia. Department
+                 of Computer Science and Engineering, The Ohio State
+                 University, Columbus, OH, USA. Beijing Huilongguan Hospital,
+                 Beijing, China. Worldwide Research and Development, Pfizer,
+                 Cambridge, MA, USA. Santa Lucia Foundation, Rome, Italy.
+                 Department of Psychiatry, Seoul National University College of
+                 Medicine, Seoul, Republic of Korea. Department of Psychiatry
+                 and Neuropsychiatric Genetics Research Group, Institute of
+                 Molecular Medicine, Trinity College Dublin, Dublin, Ireland.
+                 University Hospital Marqu{\'e}s de Valdecilla, IDIVAL,
+                 Department of Medicine and Psychiatry, School of Medicine,
+                 University of Cantabria, Santander, Spain. CIBERSAM, Centro
+                 Investigaci{\'o}n Biom{\'e}dica en Red Salud Mental,
+                 Santander, Spain. Department NESMOS, Faculty of Medicine and
+                 Psychology, University 'Sapienza' of Rome, Rome, Italy.
+                 Department of Neurology and Psychiatry, Sapienza University of
+                 Rome, Rome, Italy. Center for Addiction and Mental Health,
+                 Toronto, ON, Canada. Division of Psychological and Social
+                 Medicine and Developmental Neurosciences, Technische
+                 Universit{\"a}t Dresden, Faculty of Medicine, University
+                 Hospital C.G. Carus, Dresden, Germany. University of New South
+                 Wales, School of Psychiatry, Sydney, NSW, Australia. The
+                 University of Queensland, Queensland Brain Institute and
+                 Centre for Advanced Imaging, Brisbane, QLD, Australia.
+                 University of California, VAMC, San Francisco, CA, USA.
+                 Department of Psychiatry and Mental Health, University of Cape
+                 Town, Cape Town, South Africa. Division of Cerebral
+                 Integration, National Institute for Physiological Sciences,
+                 Aichi, Japan. Olin Neuropsychiatric Research Center, Institute
+                 of Living, Hartford Hospital and Department of Psychiatry,
+                 Yale University School of Medicine, New Haven, CT, USA.
+                 Departments of Psychiatry and Radiology, Massachusetts General
+                 Hospital, Harvard Medical School, Boston, MA, USA. Department
+                 of Psychiatry and Human Behavior, University of California
+                 Irvine, Irvine, CA, USA. Zhumadian Psychiatry Hospital, Henan
+                 Province, China. Department of Psychiatry, University of
+                 Pennsylvania, Philadelphia, PA, USA. Molecular Research Center
+                 for Children's Mental Development, United Graduate School of
+                 Child Development, Osaka University, Osaka, Japan. Department
+                 of Psychiatry, Osaka University Graduate School of Medicine,
+                 Osaka, Japan. Brain and Mind Centre, University of Sydney,
+                 Sydney, NSW, Australia. School of Electrical Engineering and
+                 Computer Science, University of Newcastle, Callaghan, NSW,
+                 Australia. Health Behaviour Research Group, University of
+                 Newcastle, Callaghan, NSW, Australia. Hunter Medical Research
+                 Institute, Newcastle, NSW, Australia. National Institute of
+                 Mental Health, Klecany, Czech Republic. Third Faculty of
+                 Medicine, Charles University, Prague, Czech Republic.
+                 University of Western Australia, Perth, WA, Australia. Erasmus
+                 University Medical Center, Rotterdam, The Netherlands.
+                 Laboratory for Neuroimaging, Department of Psychiatry,
+                 Psychosomatic Medicine and Psychotherapy, Goethe University,
+                 Frankfurt/Main, Germany. Brain and Mental Health Laboratory,
+                 Monash Institute of Cognitive and Clinical Neurosciences,
+                 School of Psychological Sciences and Monash Biomedical
+                 Imaging, Monash University, Clayton, VIC, Australia.
+                 Department of Psychiatry, Lausanne University Hospital (CHUV),
+                 University of Lausanne, Lausanne, Switzerland. Departments of
+                 Psychiatry and Radiology, Brigham and Women's Hospital,
+                 Harvard Medical School, Boston, MA, USA. Sunshine Coast Mind
+                 and Neuroscience Institute, University of the Sunshine Coast
+                 QLD, Australia, Brain and Mind Centre, University of Sydney,
+                 Sydney, NSW, Australia. Department of Psychiatry, University
+                 of Minnesota, Minneapolis, MN, USA. Research Group in
+                 Psychiatry (GIPSI), Department of Psychiatry, Faculty of
+                 Medicine, Universidad de Antioquia, Mood Disorder Program,
+                 Hospital Universitario San Vicente Fundaci{\'o}n,
+                 Medell{\'\i}n, Colombia. Department of Psychiatry,
+                 Massachusetts General Hospital, Harvard Medical School,
+                 Boston, MA, USA. University of Iowa, Iowa City, IA, USA.
+                 VABHS, Harvard Medical School, Boston, MA, USA. Department of
+                 Psychiatry, Trinity College Dublin, Dublin, Ireland.
+                 Department of Psychiatry and Biobehavioral Sciences,
+                 University of California, Los Angeles, Los Angeles, CA, USA.
+                 The University of Texas Health Science Center at Houston,
+                 Houston, TX, USA. Harvard Medical School and Massachusetts
+                 Mental Health Center Public Psychiatry Division of the Beth
+                 Israel Deaconess, Medical Center, Boston, MA, USA. The
+                 University of Newcastle, Newcastle, NSW, Australia.
+                 Schizophrenia Research Institute, Sydney, NSW, Australia.
+                 Queensland Brain Institute, The University of Queensland,
+                 Brisbane, QLD, Australia and Queensland Centre for Mental
+                 Health Research, Brisbane and Queensland Centre for Mental
+                 Health Research, Brisbane, QLD, Australia. Centre for Neural
+                 Engineering (CfNE), Department of Electrical and Electronic
+                 Engineering, University of Melbourne, Parkville, VIC,
+                 Australia. The Florey Institute of Neuroscience and Mental
+                 Health, University of Melbourne, Melbourne, VIC, Australia.
+                 Instituto de Alta Tecnolog{\'\i}a M{\'e}dica, Medell{\'\i}n,
+                 Colombia. School of Biomedical Sciences, Faculty of Health,
+                 the University of Newcastle, Callaghan, NSW, Australia.
+                 Priority Centre for Brain and Mental Health Research, The
+                 University of Newcastle, Newcastle, NSW, Australia. SU/UCT MRC
+                 Unit on Anxiety and Stress Disorders, Department of
+                 Psychiatry, Stellenbosch University, Stellenbosch, South
+                 Africa. Murdoch Childrens Research Institute, The Royal
+                 Children's Hospital, Parkville, VIC, Australia. Neuroscience
+                 Research Australia, Sydney, NSW, Australia. School of
+                 Psychiatry, University of New South Wales, Sydney, NSW,
+                 Australia. VA Boston Healthcare System, Boston, MA, USA.
+                 Division of Neuropsychiatry, Menninger Department of
+                 Psychiatry and Behavioral Sciences, Baylor College of
+                 Medicine, Houston, TX, USA. Department of Psychiatry and MRC
+                 Unit on Anxiety and Stress Disorders, University of Cape Town,
+                 Cape Town, South Africa. Department of Psychiatry, School of
+                 Clinical Sciences, Monash University and Monash Health,
+                 Clayton, VIC, Australia. Chongqing Three Gorges Central
+                 Hospital, Chongqing, China. Department of Psychology,
+                 University of Oslo, Oslo, Norway. Neuroimaging Unit,
+                 Technological Facilities, Valdecilla Biomedical Research
+                 Institute IDIVAL, Santander, Spain. Department of Psychiatry,
+                 University of Iowa, Iowa City, IA, USA. Research Group in
+                 Psychiatry (GIPSI), Department of Psychiatry, Faculty of
+                 Medicine, Universidad de Antioquia, Medell{\'\i}n, Colombia.
+                 Neuropsychiatry Unit, Royal Melbourne Hospital, Parkville,
+                 VIC, Australia. Kimel Family Translational Imaging-Genetics
+                 Research Laboratory, Campbell Family Mental Health Research
+                 Institute, CAMH Department of Psychiatry, University of
+                 Toronto, Toronto, ON, Canada. Luoyang Fifth People's Hospital,
+                 Henan Province, China. Department of Psychiatry, Yale
+                 University School of Medicine, New Haven, CT, USA. Department
+                 of Computer Science and Electrical Engineering, University of
+                 Maryland, Baltimore, MD, USA. School of Psychology, Shaanxi
+                 Normal University and Key Laboratory for Behavior and
+                 Cognitive Neuroscience of Shaanxi Province, Xi'an, Shaanxi,
+                 China. Psychology Department \&Neuroscience Institute, Georgia
+                 State University, Atlanta, GA, USA.",
+  journal     = "Mol. Psychiatry",
+  month       =  oct,
+  year        =  2017,
+  url         = "http://dx.doi.org/10.1038/mp.2017.170",
+  language    = "en",
+  issn        = "1359-4184, 1476-5578",
+  pmid        = "29038599",
+  doi         = "10.1038/mp.2017.170"
+}
+
+@ARTICLE{Van_Erp2015-ne,
+  title    = "Subcortical brain volume abnormalities in 2028 individuals with
+              schizophrenia and 2540 healthy controls via the {ENIGMA}
+              consortium",
+  author   = "van Erp, T G M and Hibar, D P and Rasmussen, J M and Glahn, D C
+              and Pearlson, G D and Andreassen, O A and Agartz, I and Westlye,
+              L T and Haukvik, U K and Dale, A M and Melle, I and Hartberg, C B
+              and Gruber, O and Kraemer, B and Zilles, D and Donohoe, G and
+              Kelly, S and McDonald, C and Morris, D W and Cannon, D M and
+              Corvin, A and Machielsen, M W J and Koenders, L and de Haan, L
+              and Veltman, D J and Satterthwaite, T D and Wolf, D H and Gur, R
+              C and Gur, R E and Potkin, S G and Mathalon, D H and Mueller, B A
+              and Preda, A and Macciardi, F and Ehrlich, S and Walton, E and
+              Hass, J and Calhoun, V D and Bockholt, H J and Sponheim, S R and
+              Shoemaker, J M and van Haren, N E M and Pol, H E H and Ophoff, R
+              A and Kahn, R S and Roiz-Santia{\~n}ez, R and Crespo-Facorro, B
+              and Wang, L and Alpert, K I and J{\"o}nsson, E G and Dimitrova, R
+              and Bois, C and Whalley, H C and McIntosh, A M and Lawrie, S M
+              and Hashimoto, R and Thompson, P M and Turner, J A",
+  journal  = "Mol. Psychiatry",
+  month    =  jun,
+  year     =  2015,
+  url      = "http://www.nature.com/mp/journal/vaop/ncurrent/full/mp201563a.html",
+  language = "en",
+  issn     = "1359-4184",
+  doi      = "10.1038/mp.2015.63"
+}
+
+@ARTICLE{Kempton2010-ms,
+  title       = "Progressive lateral ventricular enlargement in schizophrenia:
+                 a meta-analysis of longitudinal {MRI} studies",
+  author      = "Kempton, Matthew J and Stahl, Daniel and Williams, Steven C R
+                 and DeLisi, Lynn E",
+  affiliation = "Centre for Neuroimaging Sciences, Institute of Psychiatry,
+                 King's College London, UK. matthew.kempton@iop.kcl.ac.uk",
+  journal     = "Schizophr. Res.",
+  volume      =  120,
+  number      = "1-3",
+  pages       = "54--62",
+  month       =  jul,
+  year        =  2010,
+  url         = "http://dx.doi.org/10.1016/j.schres.2010.03.036",
+  language    = "en",
+  issn        = "0920-9964, 1573-2509",
+  pmid        = "20537866",
+  doi         = "10.1016/j.schres.2010.03.036"
+}
+
+@ARTICLE{Johnson2017-bp,
+  title       = "No Evidence That Schizophrenia Candidate Genes Are More
+                 Associated With Schizophrenia Than Noncandidate Genes",
+  author      = "Johnson, Emma C and Border, Richard and Melroy-Greif, Whitney
+                 E and de Leeuw, Christiaan A and Ehringer, Marissa A and
+                 Keller, Matthew C",
+  affiliation = "Department of Psychology and Neuroscience, University of
+                 Colorado Boulder, Boulder, Colorado; Institute for Behavioral
+                 Genetics, University of Colorado Boulder, Boulder, Colorado.
+                 Electronic address: emma.c.johnson@colorado.edu. Department of
+                 Psychology and Neuroscience, University of Colorado Boulder,
+                 Boulder, Colorado; Institute for Behavioral Genetics,
+                 University of Colorado Boulder, Boulder, Colorado. Department
+                 of Neuroscience, The Scripps Research Institute, La Jolla,
+                 California. Department of Complex Trait Genetics, Centre for
+                 Neurogenomics and Cognitive Research/VU University Amsterdam,
+                 Amsterdam; Institute for Computing and Information Sciences,
+                 Radboud University Nijmegen, Nijmegen, the Netherlands.
+                 Institute for Behavioral Genetics, University of Colorado
+                 Boulder, Boulder, Colorado; Department of Integrative
+                 Physiology, University of Colorado Boulder, Boulder, Colorado.",
+  journal     = "Biol. Psychiatry",
+  volume      =  82,
+  number      =  10,
+  pages       = "702--708",
+  month       =  nov,
+  year        =  2017,
+  url         = "http://dx.doi.org/10.1016/j.biopsych.2017.06.033",
+  keywords    = "Candidate genes; Complex traits; GWAS; Gene set analysis;
+                 Genome-wide association study; SNP; Schizophrenia; Single
+                 nucleotide polymorphism",
+  language    = "en",
+  issn        = "0006-3223, 1873-2402",
+  pmid        = "28823710",
+  doi         = "10.1016/j.biopsych.2017.06.033",
+  pmc         = "PMC5643230"
+}
+
 @ARTICLE{Lenroot2007-nh,
   title       = "Sexual dimorphism of brain developmental trajectories during
                  childhood and adolescence",
